# deepseek-hf-monitor

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/deepseek_hf_monitor/: __init__.py  config.py  emailer.py  healthcheck.py  monitor.py
tests/: test_config.py  test_emailer.py  test_healthcheck.py  test_monitor.py
